# lang.as

./: Cargo.toml  README.md  build.rs  import_test.as  lib_test.as  setup.py
bindings/cpp/: CMakeLists.txt  Makefile  simd_ops.cpp
bindings/cpp/include/: simd_ops.h
bindings/cpp/src/: simd_ops.cpp
bindings/go/: aslang.go  concurrent.go  go.mod
bindings/julia/: ASLang.jl  Project.toml  scientific.jl  test.jl
bindings/rust/array_ops/: Cargo.toml
bindings/rust/array_ops/src/: lib.rs
bindings/wasm/: Cargo.toml  example.html
bindings/wasm/src/: lib.rs
docs/: EXPLAINER.md
examples/: hello.as  smoke_test.as  type_error_test.as  type_test.as
scripts/: install.bat  install.sh  uninstall.sh
src/aslang/: __init__.py  __main__.py  executor.py
src/bindings/rust/array_ops/src/: lib.rs
src/bindings/wasm/: Cargo.toml
src/bindings/wasm/src/: lib.rs
src/core/: error.rs  ffi.rs  lexer.rs  lib.rs  lsp.rs  main.rs  resolver.rs  types.rs
src/core/compiler/: mod.rs
src/core/parser/: mod.rs
src/core/runtime/: mod.rs
src/runtime/: mod.rs
tests/: lexer_tests.rs  test_python_integration.py
